# universal-claude-thinking

./: .env.example  .envrc  .eslintrc.js  .gitignore  .prettierrc.js  CHANGELOG.md  CLAUDE-v3.md  ENVIRONMENT.md  LICENSE  README.md  eslint.config.js  fajdklajskdlas.md  jest.config.js  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt
.ai/: debug-log.md
.claude/: CLAUDE.md  debug-monitor.md  module-loader.md  request-classifier.md  settings.json
.claude/agents/: evaluator.md  interface.md  prompt-enhancer.md  reasoner.md  researcher.md  tool-user.md  writer.md
.claude/commands/: analyst.md  architect.md  bmad-orchestrator.md  dev.md  infra-devops-platform.md  pm.md  po.md  qa.md  sm.md  ux-expert.md
.claude/config/: metadata.yaml
.claude/hooks/: agent_coordinator.py  atomic_validator.py  prompt_enhancer.py
.claude/shared/: protocol-state.json
.github/workflows/: security.yaml  test.yaml
config/: delegation.yaml  memory_config.yaml  models.yaml
data/: thinking_v2.db-shm
docs/: architecture.md  brief.md  hooks-explained.md  pattern-learning-improvements.md  prd.md
docs/api/: memory-system.md
docs/architecture/: 7-layer-context-engineering-architecture.md  agent-automatic-delegation-tool-seo-optimization.md  agent-configuration-setup.md  agent-performance-metrics.md  agent-performance-tuning.md  agent-pipeline.md  agent-validation.md  api-integration-architecture.md  api-specification.md  backend-architecture.md  change-log.md  checking-core-components.md  checklist-results-report.md  chunking-strategy.md  classification-result.md  claude-code-hooks-architecture.md  claude-code-hooks-integration-summary.md  cleanup-results.md  coding-standards.md  cognitive-system-health-check.md  command-architecture-5-category-structure.md  common-issues.md  community-platform-architecture.md  components.md  conclusion.md  context-window-analysis.md  coordination-flow-analysis.md  core-workflows.md  creating-directory-structure.md  current-agent-status.md  data-architecture-storage-systems.md  data-models.md  database-initialization.md  database-integrity-check.md  database-optimization.md  database-schema.md  deployment-architecture.md  dev-tools-reference.md  devops-deployment-architecture.md  dual-architecture-agents-commands.md  (+61 more)
docs/prd/: 1-goals-and-background-context.md  10-checklist-results-report.md  11-project-timeline.md  12-next-steps.md  2-requirements.md  3-technical-assumptions.md  4-epic-list.md  5-epic-1-foundation-core-infrastructure.md  6-epic-2-thinking-module-migration.md  7-epic-3-cognitive-tools-templates.md  8-cross-functional-requirements.md  8-epic-4-mcp-integration-orchestration.md  9-clarity-communication.md  checklist-results-report.md  (+15 more)
migrations/: 002_add_delegation_metrics.sql
scripts/: init_db.py  init_vector_store.py
src/: __init__.py
tests/: __init__.py
(+135 files in other folders)
